[package]
name = "rust-runtime-toggles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.4.0"
tokio = {version="1.23.0", features = ["full"]}
serde_yaml = "0.9.16"
serde_derive = "1.0.152"
serde = "1.0.152"
rand = "0.8.5"


notify = "5.0.0"